Move to dirty-ranges over UDS
